--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mars Photos</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <form onsubmit="">
+            <form onsubmit="app.controllers.nasaCtrl.newSol(event)">
                 <div class="form-group col-sm-4">
                     <label for="sol">SOL (day on mars)</label>
                     <input placeholder="100" name="sol" type="number" class="form-control ">
@@ -24,7 +25,7 @@
             </form>
         </div>
         <div class="row">
-            <form onsubmit="">
+            <form onsubmit="app.controllers.nasaCtrl.camFilter(event)">
                 <div class="form-group col-sm-4">
                     <label for="camera">Camera</label>
                     <select name="camera" class="form-control">
@@ -33,7 +34,7 @@
                         <option value="MAST">Mast Camera</option>
                         <option value="CHEMCAM">Chemistry and Camera Complex</option>
                         <option value="MAHLI">Mars Hand Lens Imager</option>
-                        <option value="MARDI">Mars Descent Imager</option>  
+                        <option value="MARDI">Mars Descent Imager</option>
                         <option value="NAVCAM">Navigation Camera</option>
                     </select>
                     <button type="submit">Filter images</button>
@@ -42,6 +43,16 @@
         </div>
         <div class="row" id="gallery">
 
+            <!-- <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="//placehold.it/200x200">
+                    <div class="caption">
+                        <h3>Camera Name</h3>
+                        <p>7-8-2017</p>
+                    </div>
+                </div>
+            </div> -->
+               
         </div>
 
     </div>
